# cinder-snapshooter

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: CI.yml  Docker.yml
src/cinder_snapshooter/: cli.py  exceptions.py  snapshot_creator.py  snapshot_destroyer.py  utils.py
tests/: fixtures.py  test_cli.py  test_snapshot_creator.py  test_snapshot_destroyer.py  test_utils.py
